frontend/tests/cases/positive/interfaces/syntax/synInstanceNatParameter.gr
interface Simple a (c : Nat)

data A = B

-- An instance with a nat parameter
instance Simple A 1
