frontend/tests/cases/negative/notInScopeTyConNestedInInstanceHead.gr
data SimpleDT = SDT

interface Simple a

-- 'A' is not in scope
instance Simple (SimpleDT A)
